Rajout de la temperature de la ville

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_APP_API_BASE_URL=http://localhost:8080/WSLocaPart_war_exploded/api
+VITE_APP_API_WEATHER_URL=https://api.open-meteo.com/v1/meteofrance
